feat: Se agregó un nuevo servicio para actualizar stock de productos. Modulo para gestión de imagenes de producto finalizado. Ok
